@@ -35,7 +35,7 @@ bool ItemFilter::isEmpty() const {
             && materials.empty();
 }
 
-static bool deserializeMaterialMask(string ser, df::dfhack_material_category mat_mask) {
+static bool deserializeMaterialMask(const string& ser, df::dfhack_material_category& mat_mask) {
     if (ser.empty())
         return true;
 
@@ -46,7 +46,7 @@ static bool deserializeMaterialMask(string ser, df::dfhack_material_category mat
     return true;
 }
 
-static bool deserializeMaterials(string ser, set<DFHack::MaterialInfo> &materials) {
+static bool deserializeMaterials(const string& ser, set<DFHack::MaterialInfo> &materials) {
     if (ser.empty())
         return true;
 
@@ -63,7 +63,7 @@ static bool deserializeMaterials(string ser, set<DFHack::MaterialInfo> &material
     return true;
 }
 
-ItemFilter::ItemFilter(color_ostream &out, string serialized) : ItemFilter() {
+ItemFilter::ItemFilter(color_ostream &out, const string& serialized) : ItemFilter() {
     vector<string> tokens;
     split_string(&tokens, serialized, "/");
     if (tokens.size() < 5) {
@@ -87,11 +87,9 @@ string ItemFilter::serialize() const {
     std::ostringstream ser;
     ser << bitfield_to_string(mat_mask, ",") << "/";
     vector<string> matstrs;
-    if (!materials.empty()) {
-        for (auto &mat : materials)
-            matstrs.emplace_back(mat.getToken());
-        ser << join_strings(",", matstrs);
-    }
+    for (auto &mat : materials)
+        matstrs.emplace_back(mat.getToken());
+    ser << join_strings(",", matstrs);
     ser << "/" << static_cast<int>(min_quality);
     ser << "/" << static_cast<int>(max_quality);
     ser << "/" << static_cast<int>(decorated_only);
