@@ -39,6 +39,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## Fixes
 - `tailor`: now properly discriminates between dyed and undyed cloth and no longer defaults to using adamantine
 - `buildingplan`: upright spike traps are now placed extended rather than retracted
+- `buildingplan`: fixed material filter getting lost for planning buildings on save/reload
 
 ## Misc Improvements
 - `stockpiles`: support applying stockpile configurations with fully enabled categories to stockpiles in worlds other than the one where the configuration was exported from
